--- a/app/src/main/res/layout/content_user_detail.xml
+++ b/app/src/main/res/layout/content_user_detail.xml
@@ -9,8 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.siriporn.dogfindertest.MyDogDetail"
+    tools:context="com.siriporn.dogfindertest.UserDetail"
     tools:showIn="@layout/activity_user_detail">
 
     <android.support.constraint.ConstraintLayout
@@ -36,8 +35,8 @@
             app:layout_constraintHorizontal_bias="0.52" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/nameUser"
@@ -57,6 +56,7 @@
             android:textColor="@color/cast_expanded_controller_text_color"
             android:layout_marginTop="20dp" />
 
+        <!--
         <TextView
             android:layout_width="280dp"
             android:layout_height="37dp"
@@ -105,6 +105,7 @@
             android:layout_marginLeft="8dp"
             app:layout_constraintTop_toTopOf="@+id/FBUser"
             app:layout_constraintBottom_toBottomOf="@+id/FBUser" />
+        -->
 
     </android.support.constraint.ConstraintLayout>
 
