--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,7 +25,7 @@
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/user"
-            android:title="Adopt" />
+            android:title="My Profile" />
 
     </group>
 
