--- a/app/src/main/res/layout/content_found_post.xml
+++ b/app/src/main/res/layout/content_found_post.xml
@@ -18,11 +18,19 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+        <ImageView
+            android:layout_width="55dp"
+            app:srcCompat="@drawable/mapbutton"
+            android:id="@+id/AddLoc"
+            android:background="@android:color/transparent"
+            android:layout_height="41dp"
+            app:layout_constraintRight_toRightOf="@+id/noticeFoundPost"
+            app:layout_constraintBottom_toBottomOf="@+id/noticeFoundPost" />
 
         <ImageView
             android:id="@+id/foundUserPicWritePost"
-            android:layout_width="74dp"
-            android:layout_height="70dp"
+            android:layout_width="65dp"
+            android:layout_height="56dp"
             android:layout_alignParentTop="true"
             android:src="@drawable/com_facebook_profile_picture_blank_square"
             android:layout_marginTop="8dp"
@@ -44,12 +52,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:text= "Add dog's photo"
-            android:layout_width="304dp"
-            android:layout_height="25dp"
-            android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/noticeFoundPost"
-            android:layout_marginTop="16dp"
+            android:text= "Add"
+            android:layout_width="89dp"
+            android:layout_height="24dp"
+            android:textSize="14sp"
             android:id="@+id/textView7"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -59,7 +65,10 @@
             android:layout_marginLeft="16dp"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
-            android:background="@color/colorAccent" />
+            android:background="@color/colorAccent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/picFoundPost"
+            android:padding="5dp" />
         <ImageView
             android:layout_width="303dp"
             android:layout_height="131dp"
@@ -71,8 +80,8 @@
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView7"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/noticeFoundPost" />
 
         <ImageButton
             android:layout_width="64dp"
@@ -81,7 +90,8 @@
             android:id="@+id/imageButton7"
             app:layout_constraintTop_toTopOf="@+id/picFoundPost"
             android:layout_marginTop="32dp"
-            app:layout_constraintRight_toRightOf="@+id/picFoundPost" />
+            app:layout_constraintRight_toRightOf="@+id/picFoundPost"
+            android:background="@android:color/transparent" />
 
         <ImageButton
             android:layout_width="64dp"
@@ -90,47 +100,14 @@
             android:id="@+id/imageButton8"
             app:layout_constraintTop_toTopOf="@+id/picFoundPost"
             android:layout_marginTop="32dp"
-            app:layout_constraintLeft_toLeftOf="@+id/picFoundPost" />
-
-        <TextView
-            android:text= "Breed : "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:id="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/picFoundPost"
-            android:layout_marginTop="24dp"
-            app:layout_constraintLeft_toLeftOf="@+id/imageButton8" />
-        <TextView
-            android:id="@+id/breedFoundWritePost"
-            android:layout_width="198dp"
-            android:layout_height="47dp"
-            android:ems="10"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            app:layout_constraintLeft_toRightOf="@+id/textView6"
-            app:layout_constraintTop_toTopOf="@+id/textView6"
-            android:background="@color/com_facebook_button_background_color_disabled" />
-        <ImageButton
-            android:layout_width="49dp"
-            android:layout_height="47dp"
-            app:srcCompat="@drawable/places_ic_search"
-            android:background="@drawable/oval"
-            android:elevation="10dp"
-            android:id="@+id/searchBreed"
-            android:onClick="searchClicked"
-            app:layout_constraintLeft_toRightOf="@+id/breedFoundWritePost"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            app:layout_constraintTop_toTopOf="@+id/breedFoundWritePost"
-            app:layout_constraintHorizontal_bias="0.25" />
+            app:layout_constraintLeft_toLeftOf="@+id/picFoundPost"
+            android:background="@android:color/transparent" />
 
         <EditText
             android:id="@+id/noticeFoundPost"
             android:hint="Write your post..."
-            android:layout_width="355dp"
-            android:layout_height="146dp"
+            android:layout_width="327dp"
+            android:layout_height="92dp"
             android:textSize="18sp"
             android:gravity="top|left"
             android:layout_marginTop="8dp"
@@ -144,7 +121,7 @@
 
         <Button
             android:text="POST"
-            android:layout_width="311dp"
+            android:layout_width="312dp"
             android:layout_height="wrap_content"
             android:id="@+id/writeFoundPostBtn"
             android:onClick="writeFoundPostClicked"
@@ -154,9 +131,12 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            android:background="@android:color/holo_blue_dark"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/breedFoundWritePost" />
+            android:background="?android:attr/colorPrimary"
+            android:textStyle="normal|bold"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp" />
 
     </android.support.constraint.ConstraintLayout>
 
