--- a/app/src/main/res/layout/list_item_found.xml
+++ b/app/src/main/res/layout/list_item_found.xml
@@ -19,8 +19,9 @@
             android:layout_height="56dp"
             android:layout_alignParentTop="true"
             android:src="@drawable/com_facebook_profile_picture_blank_square"
-            tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="0dp" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp" />
 
         <TextView
             android:id="@+id/nameFB"
@@ -28,44 +29,46 @@
             android:layout_height="wrap_content"
             android:text="Name"
             app:layout_constraintTop_toTopOf="@+id/foundUserPicPost"
-            android:textSize="16sp"
-            android:layout_marginStart="10dp"
+            android:textSize="24sp"
+            android:layout_marginStart="16dp"
             app:layout_constraintLeft_toRightOf="@+id/foundUserPicPost"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginLeft="16dp"
+            android:textStyle="normal|bold" />
 
         <TextView
             android:id="@+id/foundDatePost"
             android:text="Date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
+            android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@+id/nameFB"
             app:layout_constraintLeft_toLeftOf="@+id/nameFB" />
 
         <ImageView
             android:id="@+id/picFoundPost"
             android:layout_width="384dp"
-            android:layout_height="200dp"
+            android:layout_height="228dp"
             app:srcCompat="@color/wallet_bright_foreground_disabled_holo_light"
             app:layout_constraintTop_toBottomOf="@+id/noticeFoundPost"
             app:layout_constraintRight_toRightOf="parent"
-            android:background="@color/cast_intro_overlay_button_background_color"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="8dp" />
+            android:background="@color/wallet_bright_foreground_disabled_holo_light"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/foundUserPicPost"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:scaleType="fitXY"/>
 
         <TextView
             android:id="@+id/noticeFoundPost"
             android:text="noticeable : (notice)"
             android:layout_width="381dp"
-            android:layout_height="60dp"
+            android:layout_height="28dp"
             app:layout_constraintTop_toBottomOf="@+id/foundUserPicPost"
-            android:textSize="12sp"
+            android:textSize="18sp"
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="16dp" />
 
     </android.support.constraint.ConstraintLayout>
 
