--- a/app/src/main/res/layout/list_item_lost.xml
+++ b/app/src/main/res/layout/list_item_lost.xml
@@ -20,7 +20,8 @@
             android:layout_alignParentTop="true"
             android:src="@drawable/crop_square_36"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" />
 
         <TextView
             android:id="@+id/nameFB"
@@ -28,17 +29,19 @@
             android:layout_height="wrap_content"
             android:text="Name"
             android:textSize="24sp"
-            tools:layout_editor_absoluteY="8dp"
-            tools:layout_editor_absoluteX="79dp" />
+            app:layout_constraintTop_toTopOf="@+id/lostUserPicPost"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toRightOf="@+id/lostUserPicPost"
+            android:layout_marginLeft="16dp" />
 
         <TextView
-            android:id="@+id/lostDatePost"
+            android:id="@+id/foundDatePost"
             android:text="Date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            tools:layout_editor_absoluteY="36dp"
-            tools:layout_editor_absoluteX="79dp" />
+            app:layout_constraintTop_toBottomOf="@+id/nameFB"
+            app:layout_constraintLeft_toLeftOf="@+id/nameFB" />
 
         <TextView
             android:id="@+id/nameLostPost"
@@ -54,17 +57,17 @@
 
         <ImageView
             android:id="@+id/picLostPost"
-            android:layout_width="384dp"
-            android:layout_height="228dp"
+            android:layout_width="379dp"
+            android:layout_height="221dp"
             app:srcCompat="@color/wallet_bright_foreground_disabled_holo_light"
-            app:layout_constraintTop_toBottomOf="@+id/noticeLostPost"
-            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/noticeFoundPost"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
             android:background="@color/cast_intro_overlay_button_background_color"
-            app:layout_constraintLeft_toLeftOf="@+id/noticeLostPost"
-            app:layout_constraintHorizontal_bias="1.0" />
+            app:layout_constraintLeft_toLeftOf="@+id/noticeFoundPost"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginTop="8dp" />
 
         <TextView
             android:id="@+id/breedLostPost"
@@ -76,10 +79,10 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/noticeLostPost"
+            android:id="@+id/noticeFoundPost"
             android:text="noticeable : (notice)"
             android:layout_width="370dp"
-            android:layout_height="22dp"
+            android:layout_height="26dp"
             app:layout_constraintLeft_toLeftOf="@+id/breedLostPost"
             app:layout_constraintTop_toBottomOf="@+id/breedLostPost"
             android:textSize="14sp"
