--- a/app/src/main/res/layout/content_found_post.xml
+++ b/app/src/main/res/layout/content_found_post.xml
@@ -18,22 +18,6 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-        <ImageButton
-            android:layout_width="347dp"
-            app:srcCompat="@drawable/mapbutton"
-            android:id="@+id/AddLoc"
-            android:background="@color/cardview_shadow_start_color"
-            android:layout_height="82dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/captureButtonPost"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:scaleType="fitCenter"
-            android:onClick="AddMapClicked" />
 
         <ImageView
             android:id="@+id/foundUserPicWritePost"
@@ -140,6 +124,21 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp" />
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="375dp"
+            android:layout_height="154dp"
+            tools:context="com.siriporn.dogfindertest.MapsActivity"
+            app:layout_constraintTop_toBottomOf="@+id/captureButtonPost"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp" />
 
     </android.support.constraint.ConstraintLayout>
 
