--- a/app/src/main/res/layout/content_lost_post_acitivity.xml
+++ b/app/src/main/res/layout/content_lost_post_acitivity.xml
@@ -27,8 +27,9 @@
         android:layout_height="62dp"
         android:layout_alignParentTop="true"
         android:src="@drawable/crop_square_36"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/nameFB"
@@ -37,49 +38,75 @@
         android:text="Name"
         android:textSize="24sp"
         tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="85dp" />
+        tools:layout_editor_absoluteX="77dp" />
 
-    <TextView
-        android:id="@+id/foundDatePost"
-        android:text="Date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteY="36dp"
-        tools:layout_editor_absoluteX="85dp" />
-
-    <TextView
+        <TextView
         android:id="@+id/nameLostPost"
         android:text="My dog's name"
-        android:layout_width="218dp"
-        android:layout_height="68dp"
+        android:layout_width="262dp"
+        android:layout_height="62dp"
         android:textSize="30sp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/lostUserPicWritePost"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginLeft="8dp"
+        android:paddingTop="15dp" />
 
         <ImageButton
-            android:layout_width="82dp"
+            android:layout_width="84dp"
             android:layout_height="68dp"
             app:srcCompat="@drawable/ic_search36dp"
             android:id="@+id/searchMydog"
             android:onClick="searchClicked"
-            tools:layout_editor_absoluteY="78dp"
-            tools:layout_editor_absoluteX="249dp" />
+            app:layout_constraintTop_toTopOf="@+id/nameLostPost"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/nameLostPost" />
 
         <TextView
             android:id="@+id/noticeLostPost"
             android:text="noticeable : (notice)"
-            android:layout_width="315dp"
-            android:layout_height="166dp"
-            android:textSize="14sp"
-            android:layout_marginTop="8dp"
+            android:layout_width="350dp"
+            android:layout_height="131dp"
+            android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/nameLostPost"
+            android:layout_marginTop="8dp"
             app:layout_constraintRight_toRightOf="@+id/searchMydog"
-            app:layout_constraintLeft_toLeftOf="@+id/nameLostPost"
-            app:layout_constraintHorizontal_bias="1.0" />
+            app:layout_constraintLeft_toLeftOf="@+id/nameLostPost" />
+
+        <Button
+            android:text="POST"
+            android:layout_width="312dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/writeFoundPostBtn"
+            android:onClick="writePostLostClicked"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:background="?android:attr/colorPrimary"
+            android:textStyle="normal|bold"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp" />
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="375dp"
+            android:layout_height="154dp"
+            tools:context="com.siriporn.dogfindertest.MapsActivity"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/noticeLostPost" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
