--- a/app/src/main/res/layout/layout_lost.xml
+++ b/app/src/main/res/layout/layout_lost.xml
@@ -17,7 +17,7 @@
             android:background="@drawable/oval"
             android:elevation="10dp"
             android:layout_alignParentBottom="true"
-            android:onClick="AddMyDogClicked"
+            android:onClick="AddLostPostClicked"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
