--- a/app/src/main/res/layout/content_lost_post_acitivity.xml
+++ b/app/src/main/res/layout/content_lost_post_acitivity.xml
@@ -37,49 +37,52 @@
         android:layout_height="wrap_content"
         android:text="Name"
         android:textSize="24sp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="77dp" />
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/lostUserPicWritePost"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toTopOf="@+id/lostUserPicWritePost" />
 
         <TextView
         android:id="@+id/nameLostPost"
         android:text="My dog's name"
-        android:layout_width="262dp"
-        android:layout_height="62dp"
+        android:layout_width="352dp"
+        android:layout_height="70dp"
         android:textSize="30sp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/lostUserPicWritePost"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="8dp"
-        android:paddingTop="15dp" />
-
-        <ImageButton
-            android:layout_width="84dp"
-            android:layout_height="68dp"
-            app:srcCompat="@drawable/ic_search36dp"
-            android:id="@+id/searchMydog"
-            android:onClick="searchClicked"
-            app:layout_constraintTop_toTopOf="@+id/nameLostPost"
+            android:paddingTop="15dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/nameLostPost" />
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:background="@color/com_facebook_blue"
+            android:textStyle="normal|bold"
+            android:textColor="@color/cardview_light_background"
+            android:textAlignment="center"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/lostUserPicWritePost" />
 
-        <TextView
+        <EditText
             android:id="@+id/noticeLostPost"
-            android:text="noticeable : (notice)"
+            android:hint="Write your post"
             android:layout_width="350dp"
             android:layout_height="131dp"
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/nameLostPost"
             android:layout_marginTop="8dp"
-            app:layout_constraintRight_toRightOf="@+id/searchMydog"
-            app:layout_constraintLeft_toLeftOf="@+id/nameLostPost" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:gravity="top"/>
 
         <Button
             android:text="POST"
             android:layout_width="312dp"
             android:layout_height="wrap_content"
             android:id="@+id/writeFoundPostBtn"
-            android:onClick="writePostLostClicked"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
@@ -91,7 +94,8 @@
             android:textColor="@color/cardview_light_background"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            android:onClick="writeLostPostClicked" />
 
         <fragment
             android:id="@+id/map"
@@ -109,4 +113,5 @@
             app:layout_constraintTop_toBottomOf="@+id/noticeLostPost" />
 
     </android.support.constraint.ConstraintLayout>
+
 </RelativeLayout>
